# cmd/api/errors.go
@@ -6,31 +6,31 @@ import (
 
 func (app *application) internalServerError(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Errorw("internal server error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	writeJSONError(w, http.StatusInternalServerError, "the server encountered a problem and could not process your request")
+	_ = writeJSONError(w, http.StatusInternalServerError, "the server encountered a problem and could not process your request")
 }
 
 func (app *application) conflictResponse(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Errorw("conflict error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	writeJSONError(w, http.StatusConflict, err.Error())
+	_ = writeJSONError(w, http.StatusConflict, err.Error())
 }
 
 func (app *application) badRequestResponse(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Warnw("bad request error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	writeJSONError(w, http.StatusBadRequest, err.Error())
+	_ = writeJSONError(w, http.StatusBadRequest, err.Error())
 }
 
 func (app *application) notFoundResponse(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Warnw("not found error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	writeJSONError(w, http.StatusNotFound, err.Error())
+	_ = writeJSONError(w, http.StatusNotFound, err.Error())
 }
 
 func (app *application) unauthorizedErrorResponse(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Warnw("unauthorized error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	writeJSONError(w, http.StatusUnauthorized, "unauthorized")
+	_ = writeJSONError(w, http.StatusUnauthorized, "unauthorized")
 }
 
 func (app *application) unauthorizedBasicErrorResponse(w http.ResponseWriter, r *http.Request, err error) {
 	app.logger.Warnw("unauthorized basic error", "method", r.Method, "path", r.URL.Path, "error", err.Error())
 	w.Header().Set("WWW-Authenticate", `Basic realm="Restricted", charset="UTF-8"`)
-	writeJSONError(w, http.StatusUnauthorized, "unauthorized")
+	_ = writeJSONError(w, http.StatusUnauthorized, "unauthorized")
 }
