# cmd/api/users.go
@@ -3,13 +3,17 @@ package main
 import (
 	"context"
 	"errors"
-	"fmt"
 	"net/http"
-	"strconv"
-	"strings"
 
 	"github.com/addvanced/gophersocial/internal/store"
-	"github.com/go-chi/chi/v5"
+)
+
+var (
+	ErrUserNotFound          = errors.New("user not found")
+	ErrInvalidUserIDURLParam = errors.New("invalid user ID URL parameter")
+	ErrUserAlreadyFollowed   = errors.New("user already followed")
+	ErrUserAlreadyUnfollowed = errors.New("user already unfollowed")
+	ErrFollowSameUser        = errors.New("cannot follow/unfollow yourself")
 )
 
 const userCtxKey ctxKey = "user"
@@ -29,46 +33,29 @@ const userCtxKey ctxKey = "user"
 //	@Security		ApiKeyAuth
 //	@Router			/users/{id} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
-	user := app.getUserFromCtx(r)
+	ctx := r.Context()
+
+	userID, err := app.GetInt64URLParam(ctx, "id")
+	if err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	user, err := app.store.Users.GetByID(ctx, userID)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFoundResponse(w, r, ErrUserNotFound)
+			return
+		default:
+			app.internalServerError(w, r, err)
+			return
+		}
+	}
 
 	if err := app.jsonResponse(w, http.StatusOK, user); err != nil {
 		app.internalServerError(w, r, err)
 	}
-}
-
-// activateUserHandler godoc
-//
-//	@Summary		Activates a new user profile
-//	@Description	Activates a new user profile by the invitation token
-//	@Tags			users
-//	@Produce		json
-//	@Param			token	path		string	true	"Invitation token"
-//	@Success		202		{string}	string	"User activated"
-//	@Failure		404		{object}	error
-//	@Failure		500		{object}	error
-//	@Security		ApiKeyAuth
-//	@Router			/users/activate/{token} [put]
-func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
-	token := strings.TrimSpace(chi.URLParam(r, "token"))
-
-	err := app.store.Users.Activate(r.Context(), token)
-	if err != nil {
-		switch err {
-		case store.ErrNotFound:
-			app.notFoundResponse(w, r, errors.New("activation token not found"))
-		default:
-			app.internalServerError(w, r, err)
-		}
-		return
-	}
-
-	if err := app.jsonResponse(w, http.StatusAccepted, nil); err != nil {
-		app.internalServerError(w, r, err)
-	}
-}
-
-type FollowUserRequest struct {
-	UserID int64 `json:"user_id" validate:"required,min=1"`
 }
 
 // followUserHandler godoc
@@ -85,28 +72,29 @@ type FollowUserRequest struct {
 //	@Security		ApiKeyAuth
 //	@Router			/users/{userId}/follow [put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
-	userToFollow := app.getUserFromCtx(r)
-
-	// Revert back to auth userID from ctx
-	var payload FollowUserRequest
-	if err := readJSON(w, r, &payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-
 	ctx := r.Context()
 
-	if err := Validate.StructCtx(ctx, payload); err != nil {
-		app.badRequestResponse(w, r, err)
+	authUser := app.getAuthorizedUser(ctx)
+	if authUser == nil {
+		app.internalServerError(w, r, ErrUnauthorized)
 		return
 	}
 
-	if err := app.store.Follow.Follow(ctx, userToFollow.ID, payload.UserID); err != nil {
+	userID, err := app.GetInt64URLParam(ctx, "userId")
+	if err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	} else if authUser.ID == userID {
+		app.badRequestResponse(w, r, ErrFollowSameUser)
+		return
+	}
+
+	if err := app.store.Follow.Follow(ctx, authUser.ID, userID); err != nil {
 		switch err {
 		case store.ErrAlreadyExists:
-			app.badRequestResponse(w, r, errors.New("you are already following this user"))
+			app.badRequestResponse(w, r, ErrUserAlreadyFollowed)
 		case store.ErrConflict:
-			app.badRequestResponse(w, r, errors.New("you cannot follow yourself"))
+			app.badRequestResponse(w, r, err)
 		default:
 			app.internalServerError(w, r, err)
 		}
@@ -132,26 +120,27 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 //	@Security		ApiKeyAuth
 //	@Router			/users/{userId}/unfollow [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
-	userToUnfollow := app.getUserFromCtx(r)
-
-	// Revert back to auth userID from ctx
-	var payload FollowUserRequest
-	if err := readJSON(w, r, &payload); err != nil {
-		app.badRequestResponse(w, r, err)
-		return
-	}
-
 	ctx := r.Context()
 
-	if err := Validate.StructCtx(ctx, payload); err != nil {
-		app.badRequestResponse(w, r, err)
+	authUser := app.getAuthorizedUser(ctx)
+	if authUser == nil {
+		app.internalServerError(w, r, ErrUnauthorized)
 		return
 	}
 
-	if err := app.store.Follow.Unfollow(ctx, userToUnfollow.ID, payload.UserID); err != nil {
+	userID, err := app.GetInt64URLParam(ctx, "userId")
+	if err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	} else if authUser.ID == userID {
+		app.badRequestResponse(w, r, ErrFollowSameUser)
+		return
+	}
+
+	if err := app.store.Follow.Unfollow(ctx, authUser.ID, userID); err != nil {
 		switch err {
 		case store.ErrNotFound:
-			app.notFoundResponse(w, r, errors.New("you are not following this user"))
+			app.notFoundResponse(w, r, ErrUserAlreadyUnfollowed)
 		default:
 			app.internalServerError(w, r, err)
 		}
@@ -163,34 +152,41 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 	}
 }
 
-func (app *application) addUserToCtxMiddleware(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		userId, err := strconv.ParseInt(strings.TrimSpace(chi.URLParam(r, "userId")), 10, 64)
-		if err != nil {
+// activateUserHandler godoc
+//
+//	@Summary		Activates a new user profile
+//	@Description	Activates a new user profile by the invitation token
+//	@Tags			users
+//	@Produce		json
+//	@Param			token	path		string	true	"Invitation token"
+//	@Success		202		{string}	string	"User activated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	token, err := app.GetStringURLParam(ctx, "token")
+	if err != nil {
+		app.badRequestResponse(w, r, errors.New("missing activation token"))
+		return
+	}
+
+	if err := app.store.Users.Activate(ctx, token); err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFoundResponse(w, r, errors.New("activation token not found"))
+		default:
 			app.internalServerError(w, r, err)
-			return
 		}
+		return
+	}
 
-		ctx := r.Context()
-
-		user, err := app.store.Users.GetByID(ctx, userId)
-		if err != nil {
-			switch err {
-			case store.ErrNotFound:
-				app.notFoundResponse(w, r, fmt.Errorf("user with ID '%d' was not found", userId))
-			default:
-				app.internalServerError(w, r, err)
-			}
-			return
-		}
-
-		next.ServeHTTP(w, r.WithContext(context.WithValue(ctx, userCtxKey, &user)))
-	})
+	if err := app.jsonResponse(w, http.StatusAccepted, nil); err != nil {
+		app.internalServerError(w, r, err)
+	}
 }
 
-func (app *application) getUserFromCtx(r *http.Request) *store.User {
-	if user, ok := r.Context().Value(userCtxKey).(*store.User); ok {
-		return user
-	}
-	return nil
+func (app *application) getAuthorizedUser(ctx context.Context) *store.User {
+	user, _ := ctx.Value(userCtxKey).(*store.User)
+	return user
 }
