# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "JWT Authorization header",
+        "description": "API for GopherSocial, a social network for gophers.",
         "title": "GopherSocial API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -325,11 +325,6 @@
         },
         "/users/activate/{token}": {
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Activates a new user profile by the invitation token",
                 "produces": [
                     "application/json"
@@ -774,6 +769,13 @@
                     "minLength": 3
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     },
     "tags": [
